Updated with Slack Connector

--- a/domain.yml
+++ b/domain.yml
@@ -1,46 +1,49 @@
 %YAML 1.1
 ---
 actions:
-- utter_input_curr
-- utter_destination
-- utter_date
-- action_weather
-- action_save_destination
-- utter_confirm
-- utter_another_time
-- utter_check_another_one
-- utter_greet
-- utter_boarding
-- utter_input_date
+- action_slot_reset
+- action_save_date
+- utter_thanks
 - utter_ask_location
+- utter_input_date
+- action_get_flight
+- utter_unclear
 - utter_goodbye
 - action_iata_convert
-- action_shift_best
-- utter_select_best
-- utter_unclear
-- action_save_origin
-- utter_thanks
-- action_save_date
-- action_slot_reset
-- action_get_flight
+- action_weather
+- utter_confirm
 - action_top_dest
+- action_shift_best
+- action_save_origin
+- utter_boarding
+- utter_date
+- utter_greet
+- utter_destination
+- utter_select_best
+- utter_check_another_one
+- utter_another_time
+- utter_input_curr
+- action_save_destination
 entities:
-- leave
+- deny
+- pop_dest
+- tempLoc
 - to
+- affirm
 - from
 - pop_date
-- tempLoc
-- date
 - weath
-- pop_dest
+- date
+- leave
 intents:
-- destination
-- deny
-- affirmation
-- greet
-- flight
-- goodbye
 - inform
+- greet
+- goodbye
+- affirmation
+- deny
+- flight
+- destination
+- location
 slots:
   date:
     type: text
