--- a/weather_domain.yml
+++ b/weather_domain.yml
@@ -32,6 +32,8 @@ entities:
 - tempLoc
 - leave
 - weath
+- affirm
+- deny
 intents:
 - greet
 - goodbye
@@ -40,6 +42,7 @@ intents:
 - deny
 - flight
 - destination
+- location
 
 slots:
   tempLoc:
